[package]
name = "toolkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
poem-openapi = { version = "5", features = ["swagger-ui", "openapi-explorer", "chrono"]}
tokio = { version = "1", features = ["full"] }
poem = "3"
tracing = "0.1"
tracing-subscriber = {version="0.3", features = ["env-filter"]}
slab = "0.4.4"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono", "json", "migrate" ] }
chrono = { version = "0.4", features = ["serde"] }
serde_json  = { version = "1.0", features = ["raw_value"] }
cron-parser = "0.9.0"
jsonwebtoken = "9.3.0"
dotenv = "0.15.0"
gcp_auth = "0.11"
reqwest = { version = "0.12", features = ["json", "multipart"] } # reqwest with JSON parsing support
openssl = { version = "0.10", features = ["vendored"] }
thirtyfour = "0.32.0"
base64 = "0.22"
youtube_dl = { version =  "0.9.0", features = ["tokio", "downloader-rustls-tls"] }
lazy_static = "1.4.0"
tempfile = "3.8.0"
regex = "1.10.2"
anyhow = "1.0.75"
url = "2.5.0"
urlencoding = "2.1.3"
